# dbtools

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  main.cpp
config/tableConfig/: env_data.json  iomgff.json  ioofcpt.json  ioovcpssda.json  ioovcpt.json  sea_temp_fusion.json  ssdai.json  ssdfi.json  sstf.json  sstr.json  temp_ocean_peak.json
header/mysql/: mariadb_version.h
header/mysql/server/: mysql_version.h
header/mysql/server/private/: config.h
src/DBBaseAutoGen/: BaseDBData.cpp  BaseDBData.h  BaseDBInfo.cpp  BaseDBInfo.h  BaseDBMacro.h  BaseDBWidget.cpp  BaseDBWidget.h  BaseDBWidget.ui  BaseDBWidgetHelper.h  BaseQueryWidget.cpp  BaseQueryWidget.h  ui_BaseDBWidget.h
src/DBBaseAutoGen/ui/: BaseDBWidget.ui  BaseQueryWidget.ui  ui_BaseDBWidget.h  ui_BaseQueryWidget.h
src/DBDataAutoGen/: TestStruct.cpp  TestStruct.h  env_dataStruct.cpp  env_dataStruct.h  iomgffStruct.cpp  iomgffStruct.h  ioofcptStruct.cpp  ioofcptStruct.h  ioovcpssdaStruct.cpp  ioovcpssdaStruct.h  ioovcptStruct.cpp  ioovcptStruct.h  sea_temp_fusionStruct.cpp  sea_temp_fusionStruct.h  ssdaiStruct.cpp  ssdaiStruct.h  ssdfiStruct.cpp  ssdfiStruct.h  sstfStruct.cpp  sstfStruct.h  sstrStruct.cpp  sstrStruct.h  temp_ocean_peakStruct.cpp  temp_ocean_peakStruct.h
src/DBGUIAutoGen/: env_dataDBGenGui.cpp  env_dataDBGenGui.h  iomgffDBGenGui.cpp  iomgffDBGenGui.h  ioofcptDBGenGui.cpp  ioofcptDBGenGui.h  ioovcpssdaDBGenGui.cpp  ioovcpssdaDBGenGui.h  ioovcptDBGenGui.cpp  ioovcptDBGenGui.h  sea_temp_fusionDBGenGui.cpp  sea_temp_fusionDBGenGui.h  ssdaiDBGenGui.cpp  ssdaiDBGenGui.h  ssdfiDBGenGui.cpp  ssdfiDBGenGui.h  sstfDBGenGui.cpp  sstfDBGenGui.h  sstrDBGenGui.cpp  sstrDBGenGui.h  temp_ocean_peakDBGenGui.cpp  temp_ocean_peakDBGenGui.h
src/DBServer/: EnvDataManager.cpp  EnvDataManager.h  IomgffManager.cpp  IomgffManager.h  IoofcptManager.cpp  IoofcptManager.h  IoovcpssdaManager.cpp  IoovcpssdaManager.h  IoovcptManager.cpp  IoovcptManager.h  SeaTempFusionManager.cpp  SeaTempFusionManager.h  SsdaiManager.cpp  SsdaiManager.h  SsdfiManager.cpp  SsdfiManager.h  SstfManager.cpp  SstfManager.h  SstrManager.cpp  SstrManager.h  TempOceanPeakManager.cpp  TempOceanPeakManager.h
src/base/: CommonMacro.h  DataTables.cpp  DataTables.h  MysqlConnection.cpp  MysqlConnection.h  StringTool.h  XStringA.h  XStringW.h
tools/: CppTemplate.py  CreatorTableMeta.py  TableConfig.py
